--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~52.0.8",
+    "expo-file-system": "^18.0.4",
+    "expo-media-library": "^17.0.2",
     "expo-status-bar": "~2.0.0",
+    "hermes-engine": "^0.11.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-share": "^11.1.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
