--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "hermes-engine": "^0.11.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-share": "^11.1.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "expo-cli": "^6.3.12"
+    "@react-native-community/cli": "^15.1.3",
+    "expo-cli": "^6.3.12",
+    "metro": "^0.81.0",
+    "metro-config": "^0.81.0",
+    "metro-react-native-babel-transformer": "^0.77.0"
   },
   "private": true
 }
