--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-image-picker": "^7.2.3",
-    "react-native-share": "^12.0.3"
+    "react-native-share": "^12.0.3",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
