--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-native": "0.76.5",
     "react-native-image-picker": "^7.2.3",
     "react-native-share": "^12.0.3",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
