--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-image-picker": "^7.2.3",
     "react-native-share": "^12.0.3",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-image-picker": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
